manifests/demo.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: spinnaker-demo
  namespace: '${ parameters.namespace }'
  labels:
    source: demo-2
    stack: frontend
    app: spinnaker
spec:
  replicas: 3
  selector:
    matchLabels:
      source: demo-2
      app: spinnaker
  template:
    metadata:
      labels:
        source: demo-2
        app: spinnaker
    spec:
      containers:
      - name: primary
        image: enginex.azurecr.io/spin-kub-v2-demo
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /
            port: 8000
      imagePullSecrets:
      - name: azure-enginex-registry
---

kind: Service
apiVersion: v1
metadata:
  name: spinnaker-demo
  namespace: '${ parameters.namespace }'
spec:
  selector:
    source: demo-2
    app: spinnaker
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
